--- a/Layout/Frame/styles.module.scss
+++ b/Layout/Frame/styles.module.scss
@@ -1,7 +1,9 @@
-.frame {
-  width: 100%;
-  max-width: 100%;
-  height: 100%;
-  max-height: 100%;
-  overflow: auto;
+@layer basic-ui {
+  .frame {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    max-height: 100%;
+    overflow: auto;
+  }
 }
